# HackedGlory

./: .gitignore  README.md
ghidra_scripts/: DecompileAllToC.java  DecompileAndroidToC.java
mitm/: README.md  analyze_handshake_final.py  inject_unlock.sh  run.sh  setup.sh  start.sh  vg_dashboard.html  vg_dns.py  vg_interceptor.py  vg_jsonl_viewer.py  vg_log_viewer.py  vg_match_dashboard.py  vg_push_server.py
mitm/vg_unlock_android/: CMakeLists.txt  README.md  build.ps1  build.sh  disasm_deeper.py  disasm_targets.py  find_fptrs.py  patch_xapk.py  verify_offsets.py  vg_gamekindred_jni_symbols.inc  vg_gamekindred_loader.c  vg_gamekindred_loader_trampolines.S  vg_unlock_android.c
reports/: 3d_mesh_extraction.md  adding_hidden_heroes_to_manifest.md  ce_gate_analysis.md  cff0_decryption_and_balance_extraction.md  hero_assets_inventory.md  match_protocol_spec.md  menu_ui_control_guide.md  method_schema_sheet.md  offline_protocol_surface.md  protocol_decryption_writeup.md  trophy_investigation_summary.md  vainglory_deep_inventory.md  vainglory_static_report.md
scripts/: GhidraAvatarCallback.java  GhidraAvatarTap.java  GhidraAvatarTapDisasm.java  GhidraCFF0Analysis.java  GhidraCFF0Deep.java  GhidraDeepSchemaPass.java  GhidraFindFeatureConsumers.java  GhidraFindGameTCP.java  GhidraFindGameTCP2.java  GhidraFindProfileGate.java  GhidraFindTrophyFlag.java  GhidraFullProfileVerify.java  GhidraGameConnect.java  GhidraMatchProtocol.java  GhidraMenuUIAnalysis.java  GhidraNetworkDecomp.java  GhidraOverflowVtable.java  GhidraPostMatchTrace.java  GhidraProfileGate.java  GhidraProfileHandler.java  GhidraProfileOpen.java  GhidraProfilePopulate.java  GhidraProfileShow.java  GhidraProfileTapHandler.java  GhidraProfileVtable.java  GhidraProfileVtableMap.java  (+31 more)
(+4946 files in other folders)
